syntax = "proto3";
option go_package = "github.com/4rgetlahm/backports/repositoryVolumeGenerator";

message GenerateRepositoryVolumeRequest {
    string volume_name = 1;
}

message GenerateVolumeResponse {
    string volume_name = 1;
    string containerId = 2;
}

service RepositoryVolumeGenerationService {
    rpc Generate(GenerateRepositoryVolumeRequest) returns (GenerateVolumeResponse);
}